# Lumin-control

./: .gitignore  CMakeLists.txt  README.md
include/config/: appconfig.h
include/core/: color.h  devicemanager.h  effect.h  profilemanager.h  rgbcontroller.h
include/devices/: asusdevicemanager.h  asusrgbdevice.h  demorgbdeviceplugin.h  irgbdevice.h  irgbdeviceplugin.h
include/monitoring/: sensormonitor.h
include/plugins/asus/: asusrgbdeviceplugin.h
include/ui/: mainwindow.h
src/: CMakeLists.txt  main.cpp
src/config/: CMakeLists.txt  appconfig.cpp
src/core/: CMakeLists.txt  color.cpp  devicemanager.cpp  effect.cpp  profilemanager.cpp  rgbcontroller.cpp
src/devices/: CMakeLists.txt  asusdevicemanager.cpp  asusrgbdevice.cpp  demorgbdeviceplugin.cpp  demorgbdeviceplugin.json
src/monitoring/: CMakeLists.txt  sensormonitor.cpp
src/plugins/asus/: CMakeLists.txt  asusrgbdeviceplugin.cpp  asusrgbdeviceplugin.json
src/ui/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
